--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-react": "^7.22.5",
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@rails/webpacker": "5.4.4",
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10.4.14",
@@ -12,6 +14,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.12.0",
     "react-on-rails": "13.4.0",
     "react-router-dom": "^6.15.0",
